# quickies

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs
src/components/: Home.tsx  Login.tsx  ProtectedRoutes.tsx
src/components/login/: AppleSignin.tsx  EmailForm.tsx  GoogleSignin.tsx  form-message.tsx
src/components/ui/: textarea.tsx
src/hooks/: useDeepLinkHandler.ts
src/lib/: AuthContext.tsx  utils.ts
